# afs

./: .dockerignore  .env.layerstore.example  .gitignore  .gitmodules  AGENTS.md  BUG-shared-catalog-stale-reader.md  Dockerfile  Makefile  README.md  README.zh-CN.md  change-logs.md  docker-compose.minimal.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: dockerhub-build-push.yml  python-publish.yml
cmd/afs_cli/: main.go  main_test.go
cmd/afs_discovery_grpcd/: main.go
cmd/afs_layer_converter/: main.go
cmd/afs_layerstore_grpcd/: main.go  main_test.go
cmd/afs_mount/: integration_cat_latency_test.go  integration_recover_read_test.go  main.go  main_test.go  test_helpers.go
cmd/afs_mount_cached/: main.go
cmd/afs_page_cached/: main.go
cmd/afs_proxy/: main.go  main_test.go
cmd/afs_runc/: main.go  main_test.go
cmd/afslet/: main.go
cmd/layer_converter/: main_test.go
cmd/layer_mount/: main.go  main_test.go
cmd/layerstore_grpcd/: main.go  main_test.go
cmd/registry_puller/: main.go
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  e2e.md  e2e.zh-CN.md  getting_started.md  getting_started.zh-CN.md  page-cache-design.md  performance.md
helm/: start.sh  stop.sh
python/: MANIFEST.in  README.md  pyproject.toml
python/afs_sdk/: __init__.py  _tar_stream.py  _version.py  client.py  models.py
python/afs_sdk/api/afslet/v1/: afslet_grpc.py  afslet_pb2.py
python/afs_sdk/api/afsproxy/v1/: afsproxy_grpc.py  afsproxy_pb2.py
python/examples/: execute_stream.py  reconcile_image.py
python/tests/: test_client.py
(+125 files in other folders)
