[project]
name = "afs-sdk"
dynamic = ["version"]
description = "Asyncio grpclib SDK for afs_proxy/afslet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "grpclib>=0.4.9",
  "protobuf>=6.31.1",
]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/reyoung/afs"

[tool.setuptools.packages.find]
include = ["afs_sdk*"]

[tool.setuptools_scm]
root = ".."
fallback_root = "."
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
